--- a/style/createPost/createPost.css
+++ b/style/createPost/createPost.css
@@ -96,4 +96,36 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 50%;
+}
+.postForm .list-disc {
+  list-style: none;
+}
+
+@media (min-width: 1024px) {
+  .postForm {
+    display: grid;
+    padding: 0 16px;
+    height: 100vh;
+    gap: 0 var(--layout-gap);
+    margin: 0 15%;
+    font-size: var(--fs-base);
+    grid-template-columns: 100%;
+    --article-form-actions-height: 88px;
+  }
+  .postForm .bodyBtn {
+    padding: 8px 0;
+    display: flex;
+    justify-content: space-between;
+  }
+  .postForm .btnImages {
+    padding: 0 1px;
+  }
+}
+@media (max-width: 768px) {
+  .btnSeis {
+    display: none;
+  }
+  .stickyHeader {
+    display: none;
+  }
 }/*# sourceMappingURL=createPost.css.map */
