vista articulo actualizada

--- a/views/createPost.html
+++ b/views/createPost.html
@@ -10,7 +10,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style/createPost/createPost.css" />
+    <link rel="stylesheet" href="../style/createPost/createPost.css" />
     <title>Post</title>
   </head>
   <body>
@@ -18,8 +18,8 @@
         <div class="row">
       <header class="postHeader">
         <div class="navForm">
-          <a href="index.html"
-            ><img src="./img/logo.png" width="50" height="50" alt=""
+          <a href="../index.html"
+            ><img src="../img/logo.png" width="50" height="50" alt=""
           /></a>
         <nav class="postNav">
           <ul class="postBtn">
@@ -32,7 +32,7 @@
           <button class="btn btn-default btnEquis">
             <img
               class="btnImag"
-              src="./img/post/icons8-eliminar-24.png"
+              src="../img/post/icons8-eliminar-24.png"
               alt="bold"
               width="20"
               height="20"
@@ -59,7 +59,7 @@
           <button class="btn btn-default btnImages btnBold">
             <img
               class="btnImag"
-              src="./img/post/icons8-negrita-24.png"
+              src="../img/post/icons8-negrita-24.png"
               alt="bold"
               width="30"
               height="30"
@@ -68,7 +68,7 @@
           <button class="btn btn-default btnImages btnCursiva">
             <img
               class="btnImag"
-              src="./img/post/icons8-cursiva-26.png"
+              src="../img/post/icons8-cursiva-26.png"
               alt="bold"
               width="30"
               height="30"
@@ -77,7 +77,7 @@
           <button class="btn btn-default btnImages btnEnlazar">
             <img
               class="btnImag"
-              src="./img/post/icons8-enlazar-24.png"
+              src="../img/post/icons8-enlazar-24.png"
               alt="bold"
               width="30"
               height="30"
@@ -86,7 +86,7 @@
           <button class="btn btn-default btnImages btnHeading">
             <img
               class="btnImag"
-              src="./img/post/icons8-h-48.png"
+              src="../img/post/icons8-h-48.png"
               alt="bold"
               width="30"
               height="30"
@@ -95,7 +95,7 @@
           <button class="btn btn-default btnImages btnQuotes">
             <img
               class="btnImag"
-              src="./img/post/icons8-cita-izquierda-48.png"
+              src="../img/post/icons8-cita-izquierda-48.png"
               alt="bold"
               width="30"
               height="30"
@@ -104,7 +104,7 @@
           <button class="btn btn-default btnImages btnListaNum">
             <img
               class="btnImag btnSeis"
-              src="./img/post/icons8-lista-numerada-50.png"
+              src="../img/post/icons8-lista-numerada-50.png"
               alt="bold"
               width="30"
               height="30"
@@ -113,7 +113,7 @@
           <button class="btn btn-default btnImages btnListaPunto">
             <img
               class="btnImagList btnSeis"
-              src="./img/post/icons8-order-list-67.png"
+              src="../img/post/icons8-order-list-67.png"
               alt="bold"
               width="30"
               height="50"
@@ -122,7 +122,7 @@
           <button class="btn btn-default btnImages">
             <img
               class="btnImag btnSeis"
-              src="./img/post/icons8-imagen-24.png"
+              src="../img/post/icons8-imagen-24.png"
               alt="bold"
               width="30"
               height="30"
@@ -162,12 +162,12 @@
       </footer>
     </div>
     </form>
-    <script src="createPost.js" type="module"></script>
+    <script src="../javaScript/createPost.js" type="module"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <script src="/javaScript/botones.js"></script>
+    <script src="../javaScript/botones.js"></script>
   </body>
 </html>
