--- a/style/style.css
+++ b/style/style.css
@@ -682,6 +682,10 @@ footer {
   height: 30rem;
 }
 
+.icono-corazon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-heart-fill' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z'/%3E%3C/svg%3E");
+}
+
 * {
   margin: 0;
   padding: 0;
